--- a/HTML-HMWRK.html
+++ b/HTML-HMWRK.html
@@ -21,17 +21,17 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="MaxTemp.HTML">Max Temperature</a>
-        <a class="dropdown-item" href="Humidity.HTML">Humidity</a>
-        <a class="dropdown-item" href="Cloudiness.HTML">Cloudiness</a>
-        <a class="dropdown-item" href="WindSpeed.HTML">Wind Speed</a>
+        <a class="dropdown-item" href="MaxTemp.html">Max Temperature</a>
+        <a class="dropdown-item" href="Humidity.html">Humidity</a>
+        <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
+        <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
       </div>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="Comparison.html">Comparison</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Data.HTML">Data</a>
+      <a class="nav-link" href="Data.html">Data</a>
     </li>
   </ul>
   <hr>
@@ -51,16 +51,16 @@
   <div class="container">
       <h1 class="display-3">links to graphs</h1>
       <li class="nav-item">
-        <a href="MaxTemp.HTML">Max Temperature</a></li>
+        <a href="MaxTemp.html">Max Temperature</a></li>
         <hr>
       <li>
-        <a href="Humidity.HTML">Humidity</a></li>
+        <a href="Humidity.html">Humidity</a></li>
         <hr>
       <li>
-        <a href="Cloudiness.HTML">Cloudiness</a></li>
+        <a href="Cloudiness.html">Cloudiness</a></li>
         <hr>
       <li>
-        <a href="WindSpeed.HTML">Wind Speed</a></li>
+        <a href="WindSpeed.html">Wind Speed</a></li>
   </div>
 </body>
 </html>
