--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -31,7 +31,7 @@
       <a class="nav-link" href="Comparison.html">Comparison</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Data.html">Data</a>
+      <a class="nav-link" href="Data.HTML">Data</a>
     </li>
   </ul>
   <hr>
